Closed Bug 1152361 Opened 10 years ago Closed 10 years ago

GonkDisplayJB.cpp - outbufAcquireFenceFd is not initialized during boot animation before calling hwc_set()

Categories

(Firefox OS Graveyard :: GonkIntegration, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(firefox38 wontfix, firefox39 wontfix, firefox40 fixed, b2g-v2.2 fixed, b2g-master fixed)

RESOLVED FIXED
2.2 S10 (17apr)
Tracking Status
firefox38 --- wontfix
firefox39 --- wontfix
firefox40 --- fixed
b2g-v2.2 --- fixed
b2g-master --- fixed

People

(Reporter: m1, Assigned: m1)

References

Details

(Whiteboard: [caf priority: p2][CR 819588])

Attachments

(1 file)

outbufAcquireFenceFd is not initialized in this code path: BootAnimation.cpp::AnimationThread() ... GonkDisplayJB::QueueBuffer() .. GonkDisplayJB::Post() ... hwc_set() The L HWC HAL will attempt to close outbufAcquireFenceFd if it's > -1, so during the boot animation Gecko is causing random fds to be close()ed. For reference, see the closeAcquireFds() implementation in hwc_utils.cpp: * L - https://www.codeaurora.org/cgit/quic/la/platform/hardware/qcom/display/tree/libhwcomposer/hwc_utils.cpp?h=LA.BR.1.2.3#n1461 * KK - https://www.codeaurora.org/cgit/quic/la/platform/hardware/qcom/display/tree/libhwcomposer/hwc_utils.cpp?h=LNX.LA.3.5.1#n1170
Comment on attachment 8589788 [details] [diff] [review] outbufAcquireFenceFd == -1 Review of attachment 8589788 [details] [diff] [review]: ----------------------------------------------------------------- Good find.
Attachment #8589788 - Flags: review?(mwu) → review+
Whiteboard: [CR 819588]
Whiteboard: [CR 819588] → [caf priority: p2][CR 819588]
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → 2.2 S10 (17apr)
Comment on attachment 8589788 [details] [diff] [review] outbufAcquireFenceFd == -1 Bug caused by (feature/regressing bug #): N/A User impact if declined: Device could crash randomly during boot. Testing completed: Test setup that detected the invalid close() now passes, plus couple days of normal FC testing has occurred as this patch has been in our tree for some time now. Risk to taking this patch (and alternatives if risky): Close to zero. String or UUID changes made by this patch: Zip.
Attachment #8589788 - Flags: approval-mozilla-b2g37?
Attachment #8589788 - Flags: approval-mozilla-b2g37? → approval-mozilla-b2g37+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: