Bug 1152361 - Ensure outbufAcquireFenceFd is initialized during boot animation. r=mwu